# stock_analytics

./: .env_template  README.md  main.py  pyproject.toml  supported_stocks.json
data/: yyyy-mm-dd.json
src/: analytics.py  stock_data_fetcher.py
